--- a/.travis.yml
+++ b/.travis.yml
@@ -79,13 +79,13 @@ matrix:
       arch: arm64
       language: python
       python: '3.5'      
-    - <<: *cibw_linux
       env:
-        - CIBW_BUILD="*_aarch64"
+        - CIBW_ARCHS_LINUX="aarch64"
         - CIBW_BEFORE_BUILD="yum install -y zlib-devel bzip2-devel xz-devel && python -m pip install -r requirements.txt"
         - CIBW_ENVIRONMENT='HTSLIB_CONFIGURE_OPTIONS="--disable-libcurl"'
         - CIBW_REPAIR_WHEEL_COMMAND_LINUX='auditwheel repair -L . -w {dest_dir} {wheel}'
         - CIBW_TEST_COMMAND='python -c "import pysam"'
+      <<: *cibw_linux
     - stage: deploy
       os: osx
       language: generic
